--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
 
         </div>
     </header>
-    <section class="container">
-        <div class="bg-secondar text-center mt-3 p-2 container  text-primar">
+    <!-- first <section></section> -->
+    <section>
+        <div class="container bg-secondar text-center mt-3 p-2 container  text-primar">
             <h2 >MY BABY AT</h2>
             <p class="week-p fw-bold">4th Week of Pregnancy</p>
         </div>
         
-        <video src="mindsmaking/week 4.mp4" class="w-100" role="gif" muted autoplay loop></video>
+        <video src="mindsmaking/week 4.mp4" class="w-100" role="gif" playsinline muted autoplay loop></video>
         <div class="bg-secondar text-center container text-primar p-3">
             <p class="fs-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem veritatis alias fuga saepe corrupti iusto impedit. Quae ipsum cumque magni quas totam ea consequatur vitae. Provident, culpa libero. Illo nulla voluptas nesciunt, repellendus vel, pariatur neque, aliquam autem animi excepturi numquam tempore minima! Laborum dolores corporis deleniti maiores? Perspiciatis, sequi.</p>
             <button class="btn "><a href="#" target="_blank" class="fw-bold fs-5">Read more on this &raquo;</a></button>
         </div>
     </section>
+    <!-- second section -->
     <section class="text-center container">
         <div class="text-center mt-3 p-2 text-primar">
             <h2 >MY BODY AT</h2>
@@ -39,6 +41,7 @@
             <button class="btn "><a href="#" target="_blank" class="fw-bold fs-5">Read more &raquo;</a></button>
         </div>
     </section>
+    <!-- third section -->
     <section class="text-center container">
         <div class="text-center mt-3 p-2 text-primar">
             <h2 class="week-p fw-bold">WEEK 4</h2>
@@ -53,6 +56,7 @@
         </div>
         <hr class="container">
     </section>
+    <!-- fourth section -->
     <section class="text-center container">
         <div class="text-center mt-3 p-2 text-secondary">
             <p>Adverstisement</p>
@@ -65,6 +69,7 @@
         </div>
     </section>
     <hr class="container">
+    <!-- fifth section -->
     <section class="text-center container">
         <img src="mindsmaking/week4-syptoms.png" width="100%" alt="">
         <div class="text-center p-3">
@@ -73,6 +78,7 @@
             <button class="btn "><a href="#" target="_blank" class="fw-bold fs-5">Read more &raquo;</a></button>
         </div>
     </section>
+    <!-- sixth section -->
     <section class="text-center container">
         <img src="mindsmaking/week4-syptoms.png" width="100%" alt="">
         <div class="text-center p-3">
@@ -82,6 +88,45 @@
         </div>
     </section>
     <hr class="container">
+    <!-- seventh section -->
+    <section class="container bg-secondar p-3">
+       <div class="bg-white p-2"> 
+        <div class="d-flex justify-content-center align-items-cente gap-4 p-2">
+            <span><img src="mindsmaking/question-solid.svg" width="20px" alt=""></span>
+        <div>
+            <h5 class="fw-bold">Week 4 burning questions</h5>
+            <hr class="container">
+        </div>
+        </div>
+        <div class="row my-3">
+            <img src="mindsmaking/q-one (2).png" width="30%" alt="" class="col-4">
+            <div class="col-8">
+                <p class="fs-5 fw-bold">Do you have to have an IV during labor? </p>
+               <button class="btn btn-secondary py-2 px-5"><a href="#" class="text-white">Read More</a></button>
+            </div>
+            <hr class="container mt-3" style="width: 90%;">
+        </div>
+        <div class="row my-3">
+            <img src="mindsmaking/q-one (2).png" width="30%" alt="" class="col-4">
+            <div class="col-8">
+                <p class="fs-5 fw-bold">Do you have to have an IV during labor? </p>
+               <button class="btn btn-secondary py-2 px-5"><a href="#" class="text-white">Read More</a></button>
+            </div>
+            <hr class="container mt-3" style="width: 90%;">
+            <!-- <hr class="container mt-3"> -->
+        </div>
+        <div class="row my-3">
+            <img src="mindsmaking/q-one (2).png" width="30%" alt="" class="col-4">
+            <div class="col-8">
+                <p class="fs-5 fw-bold">Do you have to have an IV during labor? </p>
+               <button class="btn btn-secondary py-2 px-5"><a href="#" class="text-white">Read More</a></button>
+            </div>
+            <hr class="container mt-3" style="width: 90%;">
+            <!-- <hr class="container mt-3"> -->
+        </div>
+       </div>
+    </section>
+    <!-- footer -->
     <footer class="container">
         <div class="text-center">
             <img src="mindsmaking/logo" width="10%" class="py-3" alt="">
