--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Nunito:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
     <title>Mindsmaking</title>
 </head>
 <body>
@@ -25,7 +28,7 @@
         <video src="mindsmaking/week 4.mp4" class="w-100" role="gif" playsinline muted autoplay loop></video>
         <div class="bg-secondar text-center container text-primar p-3">
             <p class="fs-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem veritatis alias fuga saepe corrupti iusto impedit. Quae ipsum cumque magni quas totam ea consequatur vitae. Provident, culpa libero. Illo nulla voluptas nesciunt, repellendus vel, pariatur neque, aliquam autem animi excepturi numquam tempore minima! Laborum dolores corporis deleniti maiores? Perspiciatis, sequi.</p>
-            <button class="btn "><a href="#" target="_blank" class="fw-bold fs-5">Read more on this &raquo;</a></button>
+            <button class="btn btn-bg "><a href="#" target="_blank" class="text-white fs-5">Read more on this &raquo;</a></button>
         </div>
     </section>
     <!-- second section -->
@@ -38,7 +41,7 @@
         <img src="mindsmaking/week 4 (2).png" width="100%" alt="">
         <div class="bg-secondar text-center text-primar p-3">
             <p class="fs-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem veritatis alias fuga saepe corrupti iusto impedit. Quae ipsum cumque magni quas totam ea consequatur vitae. Provident, culpa libero. Illo nulla voluptas nesciunt, repellendus vel, pariatur neque, aliquam autem animi excepturi numquam tempore minima! Laborum dolores corporis deleniti maiores? Perspiciatis, sequi.</p>
-            <button class="btn "><a href="#" target="_blank" class="fw-bold fs-5">Read more &raquo;</a></button>
+            <button class="btn btn-bg"><a href="#" target="_blank" class="text-white fs-5">Read more &raquo;</a></button>
         </div>
     </section>
     <!-- third section -->
@@ -52,7 +55,7 @@
         <div class="text-center p-3">
             <h4 class="fw-bold py-3">Shortness of breath</h4>
             <p class="fs-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem veritatis alias fuga saepe corrupti iusto impedit. Quae ipsum cumque magni quas totam ea consequatur vitae. Provident, culpa libero. Illo nulla voluptas nesciunt, repellendus vel, pariatur neque, aliquam autem animi excepturi numquam tempore minima! Laborum dolores corporis deleniti maiores? Perspiciatis, sequi.</p>
-            <button class="btn "><a href="#" target="_blank" class="fw-bold fs-5">Read more &raquo;</a></button>
+            <button class="btn btn-bg"><a href="#" target="_blank" class="text-white fs-5">Read more &raquo;</a></button>
         </div>
         <hr class="container">
     </section>
@@ -75,7 +78,7 @@
         <div class="text-center p-3">
             <h4 class="fw-bold py-3">lightning crotch</h4>
             <p class="fs-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem veritatis alias fuga saepe corrupti iusto impedit. Quae ipsum cumque magni quas totam ea consequatur vitae. Provident, culpa libero. Illo nulla voluptas nesciunt, repellendus vel, pariatur neque, aliquam autem animi excepturi numquam tempore minima! Laborum dolores corporis deleniti maiores? Perspiciatis, sequi.</p>
-            <button class="btn "><a href="#" target="_blank" class="fw-bold fs-5">Read more &raquo;</a></button>
+            <button class="btn btn-bg"><a href="#" target="_blank" class="text-white fs-5">Read more &raquo;</a></button>
         </div>
     </section>
     <!-- sixth section -->
@@ -84,7 +87,7 @@
         <div class="text-center p-3">
             <h4 class="fw-bold py-3">Why does my baby always kick at night?</h4>
             <p class="fs-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem veritatis alias fuga saepe corrupti iusto impedit. Quae ipsum cumque magni quas totam ea consequatur vitae. Provident, culpa libero. Illo nulla voluptas nesciunt, repellendus vel, pariatur neque, aliquam autem animi excepturi numquam tempore minima! Laborum dolores corporis deleniti maiores? Perspiciatis, sequi.</p>
-            <button class="btn "><a href="#" target="_blank" class="fw-bold fs-5">Read more &raquo;</a></button>
+            <button class="btn btn-bg "><a href="#" target="_blank" class="text-white fs-5">Read more &raquo;</a></button>
         </div>
     </section>
     <hr class="container">
