--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p class="week">4th Week of Pregnancy</p>
             <img src="mindsmaking/week 4(1).png" width="100%" alt="">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem veritatis alias fuga saepe corrupti iusto impedit. Quae ipsum cumque magni quas totam ea consequatur vitae. Provident, culpa libero. Illo nulla voluptas nesciunt, repellendus vel, pariatur neque, aliquam autem animi excepturi numquam tempore minima! Laborum dolores corporis deleniti maiores? Perspiciatis, sequi.</p>
-            <button class="readMore"><a href="#" target="_blank" class="text-white fs-5">Read more on this &raquo;</a></button>
+            <span class="readMore"><a href="#" target="_blank" class="text-white fs-5">Read more on this &raquo;</a></span>
     </section>
     <!-- second section -->
     <section>
@@ -32,7 +32,7 @@
             <div class="con-div">
                 <img src="mindsmaking/week 4 (2).png" width="100%" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem veritatis alias fuga saepe corrupti iusto impedit. Quae ipsum cumque magni quas totam ea consequatur vitae. Provident, culpa libero. Illo nulla voluptas nesciunt, repellendus vel, pariatur neque, aliquam autem animi excepturi numquam tempore minima! Laborum dolores corporis deleniti maiores? Perspiciatis, sequi.</p>
-                <button class="readMore"><a href="#" target="_blank">Read more &raquo;</a></button>
+                <span class="readMore"><a href="#" target="_blank">Read more &raquo;</a></span>
             </div>
     </section>
     <!-- third section -->
@@ -42,59 +42,54 @@
             <img src="mindsmaking/week4-syptoms.png" width="100%" alt="">
             <h4>Shortness of breath</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem veritatis alias fuga saepe corrupti iusto impedit. Quae ipsum cumque magni quas totam ea consequatur vitae. Provident, culpa libero. Illo nulla voluptas nesciunt, repellendus vel, pariatur neque, aliquam autem animi excepturi numquam tempore minima! Laborum dolores corporis deleniti maiores? Perspiciatis, sequi.</p>
-            <button class="readMore"><a href="#" target="_blank" class="text-white fs-5">Read more &raquo;</a></button>
-        <hr>
+            <span class="readMore"><a href="#" target="_blank" class="text-white fs-5">Read more &raquo;</a></span>
     </section>
     <!-- fourth section -->
-    <section class="secThree">
+    <section class="secThree" style="border-top: 1px solid black;">
             <p>Adverstisement</p>        
              <img src="mindsmaking/smart babus.png" width="100%" alt="">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem veritatis alias fuga saepe corrupti iusto impedit. Quae ipsum cumque magni quas totam ea consequatur vitae. Provident, culpa libero. Illo nulla voluptas nesciunt, repellendus vel, pariatur neque, aliquam autem animi excepturi numquam tempore minima! Laborum dolores corporis deleniti maiores? Perspiciatis, sequi.</p>
-            <button class="readMore-s"><a href="#" target="_blank" class="fs-5 text-white">Read more &raquo;</a></button>
+            <span class="readMore-s"><a href="#" target="_blank" class="fs-5 text-white">Read more &raquo;</a></span>
     </section>
-    <hr style="width: 90%;">
     <!-- fifth section -->
-    <section class="secThree">
+    <section class="secThree" style="border-top: 1px solid black; padding-top: 15px;">
             <img src="mindsmaking/week4-syptoms.png" width="100%" alt="">
             <h4>lightning crotch</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem veritatis alias fuga saepe corrupti iusto impedit. Quae ipsum cumque magni quas totam ea consequatur vitae. Provident, culpa libero. Illo nulla voluptas nesciunt, repellendus vel, pariatur neque, aliquam autem animi excepturi numquam tempore minima! Laborum dolores corporis deleniti maiores? Perspiciatis, sequi.</p>
-            <button class="readMore"><a href="#" target="_blank">Read more &raquo;</a></button>
+            <span class="readMore"><a href="#" target="_blank">Read more &raquo;</a></span>
     </section>
     <!-- sixth section -->
-    <section class="secThree">
+    <section class="secThree" style="border-top: 1px solid black; padding-top: 15px;">
         <img src="mindsmaking/week4-syptoms.png" width="100%" alt="">
         <h4>Why does my baby always kick at night?</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem veritatis alias fuga saepe corrupti iusto impedit. Quae ipsum cumque magni quas totam ea consequatur vitae. Provident, culpa libero. Illo nulla voluptas nesciunt, repellendus vel, pariatur neque, aliquam autem animi excepturi numquam tempore minima! Laborum dolores corporis deleniti maiores? Perspiciatis, sequi.</p>
-        <button class="readMore"><a href="#" target="_blank">Read more &raquo;</a></button>
+        <span class="readMore"><a href="#" target="_blank">Read more &raquo;</a></span>
     </section>
     <!-- seventh section -->
     <section class="secSeven">
        <div class="burning"> 
             <h5>Week 4 burning questions</h5>
-        <div class="questions">
-            <img src="mindsmaking/q-one (2).png" width="25%" alt="" class="col-4">
+        <div class="questions" style="border-bottom: 1px solid black; padding-bottom: 15px;">
+            <img src="mindsmaking/q-one (2).png" width="120px" alt="" class="col-4">
             <div>
                 <p class="doYou">Do you have to have an IV during labor? </p>
-               <button class="readMore"><a href="#" class="text-white">Read More</a></button>
+               <span class="readMore q-span"><a href="#" class="text-white">Read More</a></span>
             </div>
         </div>
-        <hr>
-        <div class="questions">
-            <img src="mindsmaking/q-one (2).png" width="25%" alt="">
+        <div class="questions" style="border-bottom: 1px solid black; padding-bottom: 15px;">
+            <img src="mindsmaking/q-one (2).png" width="120px" alt="">
             <div>
                 <p class="doYou">Do you have to have an IV during labor? </p>
-               <button class="readMore"><a href="#" class="text-white">Read More</a></button>
+               <span class="readMore q-span"><a href="#" class="text-white">Read More</a></span>
             </div>
         </div>
-        <hr>
-        <div class="questions">
-            <img src="mindsmaking/q-one (2).png" width="25%" alt="">
+        <div class="questions" style="border-bottom: 1px solid black; padding-bottom: 15px;">
+            <img src="mindsmaking/q-one (2).png" width="120px" alt="">
             <div>
                 <p class="doYou">Do you have to have an IV during labor? </p>
-               <button class="readMore"><a href="#" class="text-white">Read More</a></button>
+               <span class="readMore q-span"><a href="#" class="text-white">Read More</a></span>
             </div>
         </div>
-        <hr>
        </div>
     </section>
     <!-- footer -->
